# hermes-agent

./: AGENTS.md  README.md  hermes_logging.py  pyproject.toml  run_agent.py
学习计划/: Hermes-Agent-学习计划.md  agent稳定和了解用户.md
学习计划/学习步骤文档/: run_agent流程.md  阶段二.md
工程经验库/经验/: 总目录.md
工程经验库/经验/方案/子智能体隔离/: 用受控上下文注入和受限工具集实现子智能体隔离.md
工程经验库/经验/方案/子智能体隔离/用受控上下文注入和受限工具集实现子智能体隔离/: 方案目录.md  阶段1-子任务只接收目标和显式上下文不继承父历史.md  阶段2-子智能体工具集取父级交集并剥离禁用工具.md  阶段3-用深度和并发上限阻断递归委托风暴.md
工程经验库/经验/方案/对话上下文管理/: 用冻结提示词快照和当前轮注入管理Agent上下文.md
工程经验库/经验/方案/对话上下文管理/用冻结提示词快照和当前轮注入管理Agent上下文/: 方案目录.md  阶段1-当前轮临时上下文只注入用户消息副本.md  阶段10-上下文压缩后重建系统提示词并创建父子会话链路.md  阶段11-API错误触发压缩重试与上下文降级.md  阶段2-续会话优先恢复系统提示词快照而不是重新构建.md  阶段3-主循环前收集临时上下文并在工具循环中复用.md  阶段4-系统消息拼接与预填充消息插入请求副本.md  阶段5-Anthropic提示词缓存断点策略.md  阶段6-请求副本归一化与协议清理.md  阶段7-API用户消息与持久化用户消息分离.md  阶段8-主循环前预压缩上下文.md  阶段9-只持久化真实历史并用刷新索引避免重复写入.md
工程经验库/经验/方案/工具系统/: 用Agent级拦截和注册表分发分离状态敏感工具.md  用导入时自注册和可用性检查实现工具注册表.md
工程经验库/经验/方案/工具系统/用Agent级拦截和注册表分发分离状态敏感工具/: 方案目录.md  阶段1-状态敏感工具schema可见但执行在主循环拦截.md  阶段2-普通工具统一走注册表分发并注入运行时上下文.md
工程经验库/经验/方案/工具系统/用导入时自注册和可用性检查实现工具注册表/: 方案目录.md  阶段1-工具模块导入时注册schema和handler.md  阶段2-按工具集解析和可用性函数过滤schema.md  阶段3-按实际可用工具动态裁剪schema描述.md
工程经验库/经验/方案/工具调用容错/: 用多级修复层容错模型工具调用协议错误.md
工程经验库/经验/方案/工具调用容错/用多级修复层容错模型工具调用协议错误/: 方案目录.md  阶段1-请求前清理孤立工具结果并补齐缺失结果.md  阶段2-Unicode代理字符清理避免JSON序列化失败.md  阶段3-工具名模糊修复后再校验.md  阶段4-无效工具名注入tool错误并限制重试.md  阶段5-工具参数JSON校验与空参归一化.md  阶段6-截断工具参数拒绝执行与流式finish_reason联动.md  阶段7-委托调用截断与同批去重.md  阶段8-安全并发判定与线程池执行.md  阶段9-严格API剥离tool_calls扩展字段.md
工程经验库/经验/方案/记忆与召回/: 用全文检索和摘要实现历史会话情景召回.md  用冻结记忆快照和后台审查线程沉淀用户偏好.md  用提供者编排层统一外部记忆预取与同步.md
工程经验库/经验/方案/记忆与召回/用全文检索和摘要实现历史会话情景召回/: 方案目录.md  阶段1-空查询浏览最近会话.md  阶段2-用FTS检索并按父链路聚合历史会话.md  阶段3-命中会话并发摘要失败时降级预览.md  阶段4-Agent级拦截执行会话搜索.md
工程经验库/经验/方案/记忆与召回/用冻结记忆快照和后台审查线程沉淀用户偏好/: 方案目录.md  阶段1-记忆文件加载时冻结系统提示词快照.md  阶段2-记忆工具写入时更新实时状态但不刷新快照.md  阶段3-系统提示词读快照而工具响应读实时条目.md  阶段4-轮次nudge计数与memory调用重置.md  阶段5-压缩前flush强制保存记忆.md  阶段6-压缩后失效快照并重新加载.md  阶段7-主响应交付后后台审查记忆和技能.md
工程经验库/经验/方案/记忆与召回/用提供者编排层统一外部记忆预取与同步/: 方案目录.md  阶段1-注册内置提供者与单一外部提供者.md  阶段2-预取结果围栏注入用户消息副本.md  阶段3-回合结束同步并排队下轮预取.md  阶段4-生命周期钩子预压缩与写入桥接.md
工程经验库/经验/架构/: 后续候选清单.md  用三层修复层容错模型工具调用协议错误.md  用三层记忆分工处理偏好情景和外部召回.md  用上下文压缩和会话拆分避免长会话崩溃.md  用中央注册表和工具集管控限制模型可用工具范围.md  用子智能体隔离实现任务分解和上下文隔离.md  用稳定系统提示词与临时上下文分层保持长会话智能体稳定.md
